fix user name align

--- a/frontend/src/features/interview/style/navbar.scss
+++ b/frontend/src/features/interview/style/navbar.scss
@@ -257,6 +257,11 @@
     flex-direction: column;
     align-items: flex-end;
     text-align: right;
+    
+    @media (max-width: 768px) {
+    align-items: flex-start;
+    text-align: left;
+  }
   }
 
   &__username {
